--- a/src/app/components/hero/list/hero-list.template.html
+++ b/src/app/components/hero/list/hero-list.template.html
@@ -1,7 +1,16 @@
 <h1>My Heroes</h1>
+<div>
+  <label>Hero name:</label> <input #heroName />
+  <button (click)="add(heroName.value); heroName.value=''">
+    Add
+  </button>
+</div>
 <ul class="heroes">
   <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <span class="badge">{{hero.id}}</span>
+    <span>{{hero.name}}</span>
+    <button class="delete"
+    (click)="delete(hero); $event.stopPropagation()">x</button>
   </li>
 </ul>
 
@@ -11,4 +20,3 @@
   </h2>
   <button (click)="gotoDetail()">View Details</button>
 </div>
-<!-- <hero-detail [hero]="selectedHero"></hero-detail> -->
